# nh-tool-wifi

./: .gitignore  .gitmodules  Enclosure.FCStd
firmware/: CMakeLists.txt  config.h  init.gdb  lwipopts.h  memmap_reserve.ld  mfrc522.cpp  mfrc522.h  mqtt.cpp  mqtt.h  nh-tool-wifi.c  nh-tool-wifi.cpp  openocd.sh  settings.cpp  settings.h  test.py  tool.cpp  tool.h
front/: front.kicad_pcb  front.kicad_prl  front.kicad_pro  front.kicad_sch
front/lib/61303218421/: Crop.step
wifi-nh-tools/: wifi-nh-tools.kicad_pcb  wifi-nh-tools.kicad_prl  wifi-nh-tools.kicad_pro  wifi-nh-tools.kicad_sch
wifi-nh-tools/lib/: 8-1393239-4.kicad_sym  8-1393239-4.step  TE_8-1393239-4.kicad_mod
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/: part_info.txt
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/Allegro/: SOT96P240X120-3N.dra  r120_65.pad  sot96p240x120-3n.psm
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/Altair/: DMG2305UX-13.upfx
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/Altium/: DMG2305UX-13.SchLib  DMG2305UX-13.epw  SOT96P240X120-3N.PcbLib
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/CADSTAR/: DMG2305UX-13.csa  DMG2305UX-13.lib  SOT96P240X120-3N.cpa
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/CR-5000/: DMG2305UX-13.laf  SOT96P240X120-3N.ftf
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/CR-8000/: DMG2305UX-13.cdf
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/Capture/: DMG2305UX-13.xml
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/DesignSpark PCB PRO/: DMG2305UX-13.dsl
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/DipTrace/: DMG2305UX-13.asc
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/EasyEDA/: DMG2305UX-13.lbr
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/KiCad/: DMG2305UX-13.kicad_sym  DMG2305UX-13.lib  DMG2305UX-13.mod  SOT96P240X120-3N.kicad_mod
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/OrCAD_Allegro16/: DMG2305UX-13.edf  footprint.scr
wifi-nh-tools/lib/DIODES_DMG2305UX-13/DMG2305UX-13/PADS/: DMG2305UX-13.c  DMG2305UX-13.p  SOT96P240X120-3N.d
wifi-nh-tools/lib/MEAN_WELL_IRM-03-3.3/IRM-03-3.3/: IRM-03-3.3.epw  part_info.txt
wifi-nh-tools/lib/WAGO_2601-1103/CadenasModel/: readme-and-terms-of-use-3d-cad-models.txt
(+59 files in other folders)
